Emergency layout bugfix. Www subdomain got a premature layout update, this makes the layout managable.

--- a/public/stylesheets/www.css
+++ b/public/stylesheets/www.css
@@ -1,6 +1,8 @@
 
 h2 { font-family:Verdana }
 
+div#layout { padding:10px; margin: 100px auto 80px auto; width:800px; min-height:500px; background-color:#333333; border: solid 8px #222222; }
+
 div#main { padding: 30px 0 10px 0; font-size:15px; }
 div#main div {  }
 div#main div h2 { font-weight: bold; color: #9F0002; font-size: 25px; font-weight: normal; margin: 0 0 10px 0; }
